[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/enemies/EnemyFactory.gd" type="Script" id=1]

[node name="EnemyFactory" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="SpawnedEnemies" type="Node2D" parent="."]

[node name="SpawnPoint" type="Position2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Sprite2" type="Sprite" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true
